--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>git-traning-project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        
+    </properties>
+
 
 </project>
